modified reference to objs for pages

--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
         </div>
     </body>
 
-    <audio src='/res/audio/SpaceEngine 0.990 - Steam Release Trailer [YTmp3.net].mp3' id='audio'  allow="autoplay"></audio>
+    <audio src='./res/audio/SpaceEngine 0.990 - Steam Release Trailer [YTmp3.net].mp3' id='audio'  allow="autoplay"></audio>
     <!-- <audio src='/res/audio/footstep.mp3' id='audio2'  allow="autoplay"></audio> -->
-    <audio src='/res/audio/explosion.mp3' id='audio3'  allow="autoplay"></audio>
-    <audio src='/res/audio/laser.mp3' id='audio4'  allow="autoplay"></audio>
+    <audio src='./res/audio/explosion.mp3' id='audio3'  allow="autoplay"></audio>
+    <audio src='./res/audio/laser.mp3' id='audio4'  allow="autoplay"></audio>
 
     <script type="module" src="final.js"></script>
 
