added pdf with the description of the project

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
     <script type="x-shader/x-vertex" id="vertexShader">
 
-        //ASHIMA noise
+        //ASHIMA code for noise generation
 
         vec3 mod289(vec3 x){return x - floor(x * (1.0 / 289.0)) * 289.0;}
 
